--- a/style.css
+++ b/style.css
@@ -5,14 +5,22 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-    background: #080808;
-    color: #fff;
+    background: black;
+    color: white;
+
+
+
 }
 
 
 .container {
     padding: 10px 10%;
+
 }
 
 nav {
@@ -20,24 +28,36 @@ nav {
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-
-
-}
-.daddy{
-  margin-top: -10rem;  
 }
 
-.logo {
-    width: 184px;
-   
-    margin-left: -7rem;
+.sidemenu {
+    margin-top: -2rem;
+    margin-right: -3rem;
+}
+
+.logo p {
+    color: #f600c1;
+    font-size: 100px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    margin-left: -6rem;
+
+}
+
+.logo span {
+    color: aqua;
+    font-size: 100px;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+
 }
 
 .image img {
     width: 800px;
     height: 1000px;
     object-fit: cover;
-    margin-top: -20rem;
+    margin-top: -12rem;
+
 }
 
 .b {
@@ -54,10 +74,12 @@ nav {
 }
 
 nav ul li {
-  display: inline-block;
-  list-style: none;
-  margin: 10px 20px;
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+
 }
+
 
 nav ul li a {
     color: #fff;
@@ -84,16 +106,24 @@ nav ul li a:hover::after {
     width: 100%;
 
 }
-.header-text{
+
+.header-text {
     margin-top: -6em;
 }
-.header-text h1{
+
+.header-text h1 {
     font-size: 40px;
- letter-spacing: 1px;
+    letter-spacing: 1px;
 }
+
 .header-text h1 span {
     color: #f600c1;
 }
+
+.header-text p {
+    color: aqua;
+}
+
 .text {
     margin-top: 20%;
     font-size: 40px;
@@ -106,21 +136,16 @@ nav ul li a:hover::after {
 #about {
     padding: 80px 0;
     color: #ababab;
-
-
 }
 
 .row {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
-
 }
 
 .about-col-1 {
     flex-basis: 35%;
-
 }
 
 .about-col-1 img {
@@ -136,8 +161,6 @@ nav ul li a:hover::after {
     font-size: 60px;
     font-weight: 600;
     color: #fff;
-
-
 }
 
 .tab-titles {
@@ -193,7 +216,7 @@ nav ul li a:hover::after {
 
 #services {
     padding: 30px 0;
-   
+
 
 }
 
@@ -203,26 +226,29 @@ nav ul li a:hover::after {
     grid: 40px;
     margin-top: 50px;
     gap: 3rem;
-    width: 200%;
+    width: 100%;
 }
 
 .services-list div {
-    background: #262626;
+    background: aqua;
+    color: black;
     padding: 40px;
     font-size: 13px;
     font-weight: 300;
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s;
-    animation: slide 5s infinite linear;
+
 }
-@keyframes slide {
+
+/* @keyframes slide {
     0% {
-        transform: translateX(0);
+        transform: translateX(1);
     }
+
     100% {
-        transform: translateX(-100%);
+        transform: translateX(-10%);
     }
-}
+} */
 
 .services-list div i {
     font-size: 50px;
@@ -362,7 +388,7 @@ nav ul li a:hover::after {
     margin-top: 30px;
 }
 
-.contact-left p i{
+.contact-left p i {
     color: #f600c1;
     margin-right: 15px;
     font-size: 25px;
@@ -376,7 +402,7 @@ nav ul li a:hover::after {
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
-    color: #ababab;
+    color: aqua;
     display: inline-block;
     width: 7%;
     height: 7%;
@@ -393,7 +419,7 @@ nav ul li a:hover::after {
     background: #f600c1;
 }
 
-.contact-right1 form {
+.contact-right form {
     width: 100%;
 }
 
@@ -404,10 +430,10 @@ form textarea {
     width: 100%;
     border: 0;
     outline: none;
-    background: #262626;
+    background: aqua;
     padding: 15px;
     margin: 15px 0;
-    color: #fff;
+    color: black;
     font-size: 18px;
     border-radius: 6px;
 }
@@ -427,24 +453,110 @@ form .btn2 {
     font-weight: 300;
     margin-top: 20px;
 }
-.Copyright1 p i{
-    color: #f600c1;
+
+.Copyright1 p i {
+    color: aqua;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 /* responsiveness for small screen */
+nav .fas {
+    display: none;
+}
 
-@media only screen AND (max-width: 600px) {
+
+@media only screen and (max-width: 600px) {
     #header {
         background-image: url(images/background.png);
+
     }
 
     .header-text {
         margin-top: 100%;
         font-size: 16px;
-
     }
 
     .header-text h1 {
         font-size: 30px;
     }
+
+    nav .fas {
+        display: block;
+        font-size: 25px;
+    }
+
+    nav ul {
+        background: #f600c1;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 25px;
+
+    }
+
+    nav ul .fas {
+        position: absolute;
+        top: 35px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    .sub-title {
+        font-size: 40px;
+    }
+
+    .about-col-1,
+    .about-col-2 {
+        flex-basis: 100%;
+    }
+
+    .about-col-1 {
+        margin-bottom: 30px;
+
+    }
+
+    .about-col-2 {
+        font-size: 14px;
+    }
+
+    .tab-links {
+        font-size: 16px;
+        margin-right: 20px;
+    }
+
+    .contact-left,
+    .contact-right {
+        flex-basis: 100%;
+    }
+
+    .services-list {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 3rem;
+    }
+
+    .image img {
+        display: none;
+    }
+
+    .logo p {
+        margin-left: 2rem;
+    }
+    .work-list {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 3rem;
+    }
+
+
+
 }
