--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav {
 
 .logo p {
     color: #f600c1;
-    font-size: 100px;
+    font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     margin-left: -6rem;
@@ -46,7 +46,7 @@ nav {
 
 .logo span {
     color: aqua;
-    font-size: 100px;
+    font-size: 30px;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 
@@ -467,7 +467,7 @@ nav .fas {
 
 @media only screen and (max-width: 600px) {
     #header {
-        background-image: url(images/background.png);
+        background-image: url(images/);
 
     }
 
@@ -545,12 +545,14 @@ nav .fas {
     }
 
     .image img {
+
         display: none;
     }
 
     .logo p {
         margin-left: 2rem;
     }
+
     .work-list {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
